# youtube-parser

./: .gitignore  Claude Code + Nano Banana 2 = 构建疯狂的10,000美元网站.md  Claude_Code_Nano_Banana_Kling_15000_Animated_Sites.md  Dockerfile  PERSONAL_SITE_ASSET_PROMPTS.md  README.md  compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: __init__.py  bootstrap.py  globals.css  layout.tsx  main.py  page.tsx
app/api/: __init__.py
app/api/v1/: __init__.py  capabilities.py  health.py  parse.py
app/api/v1/capabilities/: route.ts
app/api/v1/health/: route.ts
app/api/v1/parse/: route.ts
app/contract/: __init__.py  envelope.py  error_codes.py  schemas.py
app/shared/: __init__.py  http_client.py  logging.py  settings.py
app/youtube/: __init__.py
app/youtube/application/: __init__.py  parse_youtube_service.py
app/youtube/domain/: __init__.py  models.py  value_objects.py
app/youtube/mapper/: __init__.py  parsed_content_mapper.py
app/youtube/normalization/: __init__.py  metadata_normalizer.py  transcript_normalizer.py  url_normalizer.py
app/youtube/providers/: __init__.py  base.py  oembed_provider.py  orchestrator.py  yt_dlp_provider.py
components/site/: act-two-sequence.tsx  hero-stage.tsx  signal-ticker.tsx
deploy/: .env.prod.example  .release.local.env.example  README.md  compose.prod.yaml
docs/: README.md  parser-contract.md  redesign.md
docs/architecture/: environment-strategy.md  overview.md  project-structure.md  provider-strategy.md
docs/architecture/decisions/: 0001-use-python-fastapi-for-parser-service.md
docs/modules/: parsing-pipeline.md  phase3-provider-implementation.md
docs/operations/: deployment.md  development-workflow.md
docs/product/: prd.md
docs/roadmap/: current.md
lib/: parser-contract.ts  youtube-parse.ts
scripts/: build-image.sh  build-release-image.sh  deploy-prebuilt-release.sh  dev.sh  export-release-bundle.sh  release-prod.sh  service-release.conf
tests/: __init__.py  conftest.py
tests/contract/: __init__.py  test_contract.py
tests/fixtures/: __init__.py  samples.py
tests/integration/: __init__.py
